--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
 </head>
 <body>
     <div class="navBar">Nav <button>Tst</button><button>Tst</button><button>Tst</button></div>
-    <div class = "row, carousel">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--<div class = "row, carousel">
         <div class="carousel-track">
         <div class="column, slide" style="background-color: aliceblue;">Destacados</div>
         <div class="column, slide" style="background-color: rgb(40, 93, 139);">Destacados 2</div>
@@ -20,8 +41,55 @@
     </div>
     <div class = "row">
         <div class = column>Productos</div>
+
+        
     </div>
-    
+
+    <div class="a-carousel-row-inner">
+        <div class="a-carousel-col a-carousel-left" style="height: 304px; visibility: visible; z-index: 10;">
+            <a class="a-carousel-goto-prevpage" href="#">
+                <i class="a-icon">
+                    <span class="a-icon-alt">Página anterior</span>
+                </i>
+            </a>
+        </div>-->
+        <div class="carousel-col">
+            <div class="carousel-viewport" style="height: 304px;">
+                <ol class="carousel" style="width: 2004px; height: 304px; border-width: 5px; border-color: black;">
+                    <li class="carousel-card" style="float: left; width: 240px; margin-left: 0px;">
+                        <div class="product-wrapper" style="min-height: 304px;">
+                            <a class="product-link" href="">
+                                <div class="image-container">
+                                    <img alt="Producto1" src="https://dyson-h.assetsadobe2.com/is/image/content/dam/dyson/images/products/primary/443095-01.png" height="220" width="240">
+                                </div>
+                                <div class="product-detail">
+                                    <span class="product-name-label" style="--max-rows:1">Aspiradora sin cable Dyson V10 Total Clean (Níquel/Negro)</span>
+                                    <div class="price-field">
+                                        <span class="price">1,89€</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="carousel-card" style="float: left; width: 240px; margin-left: 0px;">
+                        <div class="product-wrapper" style="min-height: 304px;">
+                            <a class="product-link" href="">
+                                <div class="image-container">
+                                    <img alt="Producto1" src="https://dyson-h.assetsadobe2.com/is/image/content/dam/dyson/images/products/primary/443095-01.png" height="220" width="240">
+                                </div>
+                                <div class="product-detail">
+                                    <span class="product-name-label" style="--max-rows:1">Aspiradora sin cable Dyson V10 Total Clean (Níquel/Negro)</span>
+                                    <div class="price-field">
+                                        <span class="price">1,89€</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                </ol>
+            </div>
+        </div>
+        <!-- <div style="height: 12dvi; width: 10dvi; background-color: black;"></div> -->
     <div class="footer">Btm</div>
     <script src="scrippt.js"></script>
 </body>
